--- a/public/index.html
+++ b/public/index.html
@@ -32,12 +32,19 @@
     </header>
     
 
-    <section>
-        <article></article>
+    <section class='landing'>
+        <div class="landing-text1"><h1>Sewing</h1></div>
+        <div class="landing-text2"><h1>3D</h1></div>
+        <div class="loadingContainer">
+            <div class="ball1"></div>
+            <div class="ball2"></div>
+            <div class="ball3"></div>
+        </div>
+        <div class="header_img"></div>
     </section>
 
     <main>
-
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit quo earum deleniti quaerat soluta? Ipsum aliquam amet saepe iste. Excepturi minus modi quis distinctio similique mollitia dicta labore sit at?</p>
     </main>
 
     <footer>
