fixed navbar and landing page responsive

--- a/public/index.html
+++ b/public/index.html
@@ -32,19 +32,23 @@
     </header>
     
 
-    <section class='landing'>
-        <div class="landing-text1"><h1>Sewing</h1></div>
-        <div class="landing-text2"><h1>3D</h1></div>
-        <div class="loadingContainer">
-            <div class="ball1"></div>
-            <div class="ball2"></div>
-            <div class="ball3"></div>
+    <section class='landing container'>
+        <div class="landing-text">
+            <div class="landing-text1"><h1>Sewing</h1></div>
+            <div class="landing-text2"><h1>3D</h1></div>
+            <div class="loadingContainer">
+                <div class="ball1"></div>
+                <div class="ball2"></div>
+                <div class="ball3"></div>
+            </div>
         </div>
-        <div class="header_img"></div>
+        <div class="landing-img"><div></div></div>
     </section>
 
     <main>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit quo earum deleniti quaerat soluta? Ipsum aliquam amet saepe iste. Excepturi minus modi quis distinctio similique mollitia dicta labore sit at?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos cum incidunt, veniam animi quis cumque dolorem explicabo voluptas officia alias, consequuntur magnam expedita deserunt dicta itaque assumenda nulla voluptates dolores?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure distinctio unde placeat nobis. Dolor numquam ducimus in dolores aut neque iusto ex deserunt omnis magnam, esse vitae enim vel itaque.</p>
     </main>
 
     <footer>
