Added about and portfolio along with carousel

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Sewing3D</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Poppins:100,400|Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/49ce7ab8c6.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
@@ -45,11 +46,53 @@
         <div class="landing-img"><div></div></div>
     </section>
 
-    <main>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit quo earum deleniti quaerat soluta? Ipsum aliquam amet saepe iste. Excepturi minus modi quis distinctio similique mollitia dicta labore sit at?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos cum incidunt, veniam animi quis cumque dolorem explicabo voluptas officia alias, consequuntur magnam expedita deserunt dicta itaque assumenda nulla voluptates dolores?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure distinctio unde placeat nobis. Dolor numquam ducimus in dolores aut neque iusto ex deserunt omnis magnam, esse vitae enim vel itaque.</p>
+    <main class='about'>
+        <div class="about-img">
+            <div></div>
+        </div>
+        <div class="about-text">
+            <div>
+                <h1>Who Are We ?</h1>
+                <div class="bar"></div>
+                <br>
+                <p>We are industry experts in 3D printing working with the most sophisticated machines to make your product a reality. With our expertise we aim to bring your product to the market. We believe in delivering the highest quality products as per our customer requirements. We also offer purchase options for some of our incredible products. We assure 100% customer satisfaction at all costs.</p>
+            </div>
+        </div>
     </main>
+
+    <section class="products">
+        <div class="products-text">
+            <h1>Our Products</h1>
+            <div class="bar"></div>
+        </div>
+        <div class="carousel">
+            <div class="slide current">
+                <div class="content">
+                    <h1>Slide One</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quaerat non unde totam voluptatum beatae?</p>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="content">
+                    <h1>Slide Two</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quaerat non unde totam voluptatum beatae?</p>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="content">
+                    <h1>Slide Three</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quaerat non unde totam voluptatum beatae?</p>
+                </div>
+            </div>
+        </div>
+        <div class="buttons">
+            <button id="prev"><i class="fas fa-arrow-left"></i></button>
+            <button id="next"><i class="fas fa-arrow-right"></i></button>
+        </div>
+    </section>
+
+    
+
 
     <footer>
 
