--- a/public/index.html
+++ b/public/index.html
@@ -91,13 +91,48 @@
         </div>
     </section>
 
+    <div class="make-space"></div>
+
+    <section class="contact">
+        <div class="contact-left-img"><div class="right-gradient"></div></div>
+        <div class="contact-middle-text">
+            <div class="contact-text">
+                <h1>Contact Us</h1>
+                <div class="bar"></div>
+            </div>
+            <p>Address: Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, quasi!</p>
+            <p>Email: contact@sewing3D.com</p>
+            <p>Phone: (+91) 1234-123-123</p>
+        </div>
+        <div class="contact-right-img"><div class="left-gradient"></div></div>
+    </section>
+
+    <section class="quotation">
+        <div class="quotation-text">
+            <h1>Get Quotation</h1>
+            <div class="bar"></div>
+        </div>
+        <div class="quotation-form">
+            <form action="#">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" placeholder="Name">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="Email ID">
+                <label for="contact">Contact</label>
+                <input type="number" id="contact" name="contact" placeholder="Contact Number with International code">
+                <label for="upload">Upload STL</label>
+                <input type="file" id="upload" name="upload" accept=".stl">
+                <label for="comments">Comments</label>
+                <textarea name="comments" id="comments" cols="30" rows="10" placeholder="Enter Your Queries or Comments here"></textarea>
+            </form>
+        </div>
+    </section>
     
-
-
-    <footer>
-
+    <footer class="copyright">
+        <div class="copyright-text">
+            <p>Copyright &copy; 2020 Sewing3D.com</p>
+        </div>
     </footer>
-
 
     <script src="js/script.js"></script>
 </body>
