Sewing 3D website changes OCt

--- a/public_old/index.html
+++ b/public_old/index.html
@@ -6,7 +6,6 @@
     <title>Sewing3D</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Poppins:200,400|Roboto&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/ico" href="/public/img/favicon/favicon1.ico" />
     <script src="https://kit.fontawesome.com/49ce7ab8c6.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -107,7 +106,7 @@
                 <div class="bar"></div>
             </div>
             <br>
-            <p>Address: A5-201, PHL complex, Daulat Nagar, Santacruz (West), Mumbai - 400054, IN</p>
+            <p>Address: Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, quasi!</p>
             <br>
             <p>Email: sewing3d.in@gmail.com</p>
             <br>
@@ -127,7 +126,7 @@
             <div class="bar"></div>
         </div>
         <div class="quotation-form">
-            <form action="mailto:sewing3d.in@google.com" method="post" enctype="text/plain" class="form-items" id="quotation-form">
+            <form action="#" class="form-items" id="quotation-form">
                 <label for="name">Name</label>
                 <input type="text" id="name" name="name" class="form-input" placeholder="Name" required>
                 <span class="form-error"></span><br>
