--- a/public/index.html
+++ b/public/index.html
@@ -78,44 +78,68 @@
         <div class="carousel">
             <div class="slide current">
                 <div class="content">
-                    <h1>Face Shield</h1>
-                    <p>Custom face shield with your name and logo</p>
+                    <h1>Dauphin AS365 N3</h1>
+                    <p>A true replica of Airbus Dauphin AS365N3 scaled to 1:30</p>
                 </div>
             </div>
             <div class="slide">
                 <div class="content">
-                    <h1>Replacable Sheets</h1>
-                    <p>Easily replace the sheets and be ready to go</p>
+                    <h1>Dauphin AS365 N3</h1>
+                    <p>A true replica of Airbus Dauphin AS365N3 scaled to 1:30</p>
                 </div>
             </div>
             <div class="slide">
                 <div class="content">
-                    <h1>Mask Strap</h1>
-                    <p>Mask Strap with your name to keep your ears protected</p>
+                    <h1>Dauphin N3 Airforce</h1>
+                    <p>A true replica of Airbus Dauphin AS365N3 scaled to 1:30</p>
                 </div>
             </div>
             <div class="slide">
                 <div class="content">
-                    <h1>Mobile Stand</h1>
-                    <p>Mobile stand with a personal touch</p>
+                    <h1>Dauphin N3 Airforce</h1>
+                    <p>A true replica of Airbus Dauphin AS365N3 scaled to 1:30</p>
                 </div>
             </div>
             <div class="slide">
                 <div class="content">
-                    <h1>Lithopane Keychain</h1>
-                    <p>Gift this personalized keychain to your loved ones</p>
+                    <h1>Dauphin N3 Airforce</h1>
+                    <p>A true replica of Airbus Dauphin AS365N3 scaled to 1:30</p>
                 </div>
             </div>
             <div class="slide">
                 <div class="content">
-                    <h1>Laptop Stand</h1>
-                    <p>Custom laptop stand with multiple angles</p>
+                    <h1>C-17 Globe Master</h1>
+                    <p>The Indian Airforce C-17 Globe Master 1:120 Model</p>
                 </div>
             </div>
             <div class="slide">
                 <div class="content">
-                    <h1>Get your name here</h1>
-                    <p>Personalize this for your needs</p>
+                    <h1>C-17 Globe Master</h1>
+                    <p>The Indian Airforce C-17 Globe Master 1:120 Model</p>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="content">
+                    <h1>C-17 Globe Master</h1>
+                    <p>The Indian Airforce C-17 Globe Master 1:120 Model</p>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="content">
+                    <h1>Ilyushin IL-76</h1>
+                    <p>A true replica of the Indian Airforce IL-76</p>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="content">
+                    <h1>Ilyushin IL-76</h1>
+                    <p>A true replica of the Indian Airforce IL-76</p>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="content">
+                    <h1>Ilyushin IL-76</h1>
+                    <p>A true replica of the Indian Airforce IL-76</p>
                 </div>
             </div>
         </div>
@@ -134,7 +158,7 @@
             <h1>Price List</h1>
             <div class="bar"></div>
         </div>
-        <div class="price-list-table">
+        <!-- <div class="price-list-table">
             <div class="product-list-div">
                 <ul class="product-list-ul">
                     <li>Laptop Stand:</li>
@@ -153,11 +177,79 @@
                     <li>&#8377 250/-</li>
                 </ul>
             </div>
+        </div> -->
+        <div class="">
+            <table>
+                <tr>
+                    <th>Model</th>
+                    <th>Scale</th>
+                    <th>Price</th>
+                  </tr>
+                  <tr>
+                    <td>Dauphin AS365 N3</td>
+                    <td>1:45 (Stationary)</td>
+                    <td>&#8377 2500/-</td>
+                  </tr>
+                  <tr>
+                    <td>Dauphin AS365 N3</td>
+                    <td>1:30 (Stationary)</td>
+                    <td>&#8377 3500/-</td>
+                  </tr>
+                  <tr>
+                    <td>Dauphin AS365 N3</td>
+                    <td>1:45 (Working)</td>
+                    <td>&#8377 4500/-</td>
+                  </tr>
+                  <tr>
+                    <td>C-17 Globe Master</td>
+                    <td>1:120 (Stationary)</td>
+                    <td>&#8377 2000/-</td>
+                  </tr>
+                  <tr>
+                    <td>C-17 Globe Master</td>
+                    <td>1:170 (Stationary)</td>
+                    <td>&#8377 3000/-</td>
+                  </tr>
+                  <tr>
+                    <td>C-17 Globe Master</td>
+                    <td>1:170 (Working)</td>
+                    <td>&#8377 3500/-</td>
+                  </tr>
+                  <tr>
+                    <td>Sea Duck from Tale Spin</td>
+                    <td>Six Inch (Stationary)</td>
+                    <td>&#8377 1500/-</td>
+                  </tr>
+                  <tr>
+                    <td>Sea Duck from Tale Spin</td>
+                    <td>Ten Inch (Stationary)</td>
+                    <td>&#8377 2500/-</td>
+                  </tr>
+                  <tr>
+                    <td>Sea Duck from Tale Spin</td>
+                    <td>Ten Inch (Working)</td>
+                    <td>&#8377 3000/-</td>
+                  </tr>
+                  <tr>
+                    <td>Ilyushin IL-76</td>
+                    <td>1:152</td>
+                    <td>&#8377 2000/-</td>
+                  </tr>
+                  <tr>
+                    <td>Ilyushin IL-76</td>
+                    <td>1:100</td>
+                    <td>&#8377 3000/-</td>
+                  </tr>
+            </table>
         </div>
         <br>
-        <div class="delivery-charges">
+        <!-- <div class="delivery-charges">
             <p>*Delivery charges flat &#8377 50/- nationwide</p>
             <p>All products are custom made with name or logo where applicable</p>
+        </div> -->
+        <div class="delivery-charges">
+            <p>*Delivery charges as applicable</p>
+            <p>For placing orders or customising please contact us using the below details</p>
         </div>
     </section>
 
@@ -250,6 +342,6 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-database.js"></script>
 
-    <script src="js/script-obfuscated.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
