--- a/public/index.html
+++ b/public/index.html
@@ -142,6 +142,12 @@
                     <p>A true replica of the Indian Airforce IL-76</p>
                 </div>
             </div>
+            <div class="slide">
+                <div class="content">
+                    <h1>Sea Duck from Tale Spin</h1>
+                    <p>A replica of the Amphibian Conwing L-16</p>
+                </div>
+            </div>
         </div>
         <div class="buttons">
             <button id="prev">
